Fix events test with missing user

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [pytest]
-norecursedirs = ve static media .git
+norecursedirs = ve static media .git env venv v3 ve3 venv3 env3
 DJANGO_SETTINGS_MODULE=incubator.settings
 addopts = --reuse-db
