--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,10 @@
 incubator/local_settings.py
 media/
+ve/
+collected_static/
+
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
