--- a/requirements.txt
+++ b/requirements.txt
@@ -13,3 +13,4 @@ Pillow
 git+git://github.com/benjaoming/django-wiki.git@93d7cb12cdb6cae3ae088564b7cd9f7cf5b79831
 influxdb
 django-resized
+requests
