--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-datetime-widget
 Markdown
 redis
 Pillow
-git+git://github.com/benjaoming/django-wiki.git@93d7cb12cdb6cae3ae088564b7cd9f7cf5b79831
+git+http://github.com/django-wiki/django-wiki.git@009fbf2bbb5c45b49dc26e61d028529b05642848
 influxdb
 django-resized
 requests
