--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ django-datetime-widget
 Markdown
 redis
 Pillow
-git+http://github.com/django-wiki/django-wiki.git@009fbf2bbb5c45b49dc26e61d028529b05642848
+wiki
 influxdb
 django-resized
 requests
