Upgrade to Django 1.9 (and remove depreciation warnings for 1.10) (#99)
* Upgrade django and actstream
* Use a pypi distibution of django wiki
* Update urlpatterns to the django 1.10 style
* Remove django-activelink
* http://stackoverflow.com/questions/4931376/generating-matplotlib-graphs-without-a-running-x-server
* Update the config for 1.9
* Thanks @Psycojoker

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
-Django>=1.8,<1.9
+Django>=1.9,<1.10
 pytest-django
 django-extensions
 ipython
 django-debug-toolbar
 django-bootstrap3
-django-activelink
 djangorestframework
 django-datetime-widget
 Markdown
 redis
 Pillow
-git+http://github.com/django-wiki/django-wiki.git@009fbf2bbb5c45b49dc26e61d028529b05642848
+wiki
 influxdb
 django-resized
 requests
 django-crispy-forms
 django-filter
-django-activity-stream
+django-activity-stream>=0.6.1
 ics
 django-analytical
 django-jsonfield
