--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ python:
 
 cache: pip
 
+install:
+  - "pip install -U pip setuptools"
+  - "pip install -r requirements.txt"
+
+
 script:
   - ./manage.py check
   - py.test
