--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,16 @@
 sudo: false
 
 language: python
+
 python:
   - "3.4"
 
 cache: pip
+
+install:
+  - "pip install -U pip setuptools"
+  - "pip install -r requirements.txt"
+
 
 script:
   - ./manage.py check
