--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Django>=1.9,<1.10
 pytest-django
 django-extensions
 ipython
-django-debug-toolbar
+django-debug-toolbar<1.6,>=1.5
 django-bootstrap3
 djangorestframework
 django-datetime-widget
