--- a/requirements.txt
+++ b/requirements.txt
@@ -24,3 +24,40 @@ pandas
 django-pandas
 pip>8.0
 django-constance[database]
+arrow==0.4.2
+bleach==1.5.0
+certifi==2017.7.27.1
+chardet==3.0.4
+cycler==0.10.0
+decorator==4.1.2
+django-classy-tags==0.8.0
+django-jsonfield-compat==0.4.4
+django-mptt==0.8.7
+django-nyt==1.0b5
+django-picklefield==1.0.0
+django-sekizai==0.10.0
+django-suit==0.2.25
+html5lib==0.9999999
+idna==2.6
+ipython-genutils==0.2.0
+jedi==0.10.2
+numpy==1.13.1
+olefile==0.44
+pexpect==4.2.1
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+psycopg2==2.7.3.1
+ptyprocess==0.5.2
+py==1.4.34
+Pygments==2.2.0
+pyparsing==2.2.0
+pytest==3.2.2
+python-dateutil==2.6.1
+pytz==2017.2
+simplegeneric==0.8.1
+six==1.11.0
+sorl-thumbnail==12.3
+sqlparse==0.2.3
+traitlets==4.3.2
+urllib3==1.22
+wcwidth==0.1.7
