--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ django-activity-stream>=0.6.1
 ics
 django-analytical
 django-jsonfield
+django-jsonfield-compat
 matplotlib
 pandas
 django-pandas
