--- a/requirements.txt
+++ b/requirements.txt
@@ -9,12 +9,12 @@ django-datetime-widget
 Markdown==2.6.11
 redis
 Pillow
-wiki
+wiki<0.4.0
 influxdb
 django-resized
 requests
 django-crispy-forms
-django-filter
+django-filter<2.0.0
 django-activity-stream>=0.6.1
 ics
 django-analytical
