--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,15 @@ django-debug-toolbar<1.6,>=1.5
 django-bootstrap3
 djangorestframework<3.7.0
 django-datetime-widget
-Markdown
+Markdown<2.7,>=2.6
 redis
 Pillow
-wiki
+wiki<0.4
 influxdb
 django-resized
 requests
 django-crispy-forms
-django-filter
+django-filter<2
 django-activity-stream>=0.6.1
 ics
 django-analytical
