fixing merge issue

--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,15 @@ django-debug-toolbar<1.6,>=1.5
 django-bootstrap3
 djangorestframework<3.7.0
 django-datetime-widget
-Markdown<2.7,>=2.6
+Markdown==2.6.11
 redis
 Pillow
-wiki<0.4
+wiki<0.4.0
 influxdb
 django-resized
 requests
 django-crispy-forms
-django-filter<2
+django-filter<2.0.0
 django-activity-stream>=0.6.1
 ics
 django-analytical
