--- a/requirements.txt
+++ b/requirements.txt
@@ -23,5 +23,6 @@ django-jsonfield-compat
 pandas
 django-pandas
 pip>8.0
+django-reversion
 django-constance[database]
  -e git://github.com/darklow/django-suit.git@v2#egg=django-suit
