--- a/requirements.txt
+++ b/requirements.txt
@@ -23,6 +23,6 @@ django-jsonfield-compat
 pandas
 django-pandas
 pip>8.0
-django-reversion
+django-reversion<3.0
 django-constance[database]
  -e git://github.com/darklow/django-suit.git@v2#egg=django-suit
