--- a/requirements_newiki.txt
+++ b/requirements_newiki.txt
@@ -1,65 +1,68 @@
-apparmor==2.13.3
-appdirs==1.4.3
-application-utility==1.2.1
+arrow==0.14.7
+atomicwrites==1.3.0
 attrs==19.3.0
-bauh==0.7.0
-beautifulsoup4==4.8.0
-btrfsutil==1.1.1
-CacheControl==0.12.5
-catfish==1.4.10
+backcall==0.1.0
+bleach==1.5.0
+certifi==2019.9.11
 chardet==3.0.4
-colorama==0.4.1
-configobj==5.0.6
-cupshelpers==1.0
-distlib==0.2.9
-distro==1.4.0
-docopt==0.6.2
-gufw==19.10.0
-html5lib==1.0.1
-httplib2==0.13.1
+decorator==4.4.1
+Django==1.9.13
+django-activity-stream==0.8.0
+django-analytical==2.5.0
+django-bootstrap3==11.1.0
+django-classy-tags==0.9.0
+django-constance==2.4.0
+django-crispy-forms==1.8.0
+django-datetime-widget==0.9.3
+django-debug-toolbar==1.5
+django-extensions==2.2.5
+django-filter==1.1.0
+django-jsonfield==1.3.1
+django-jsonfield-compat==0.4.4
+django-mptt==0.8.7
+django-nyt==1.0
+django-pandas==0.6.1
+django-picklefield==2.0
+django-resized==0.3.9
+django-sekizai==1.0.0
+django-simple-history==1.9.1
+-e git://github.com/darklow/django-suit.git@afcc506e94e5d4018da1ca6352b5b1718abb2f1c#egg=django_suit
+djangorestframework==3.6.4
+html5lib==0.9999999
+ics==0.6
 idna==2.8
 importlib-metadata==0.23
-keyutils==0.6
-lensfun==0.3.2
-LibAppArmor==2.13.3
-lightdm-gtk-greeter-settings==1.2.2
-lockfile==0.12.2
-louis==3.11.0
-lxml==4.4.1
-menulibre==2.2.1
+influxdb==5.2.3
+ipython==7.9.0
+ipython-genutils==0.2.0
+jedi==0.15.1
+Markdown==2.6.11
 more-itertools==7.2.0
-msgpack==0.6.2
-mugshot==0.4.1
-npyscreen==4.10.5
+numpy==1.17.3
 packaging==19.2
-pacman-mirrors==4.15
-pep517==0.6.0
+pandas==0.25.3
+parso==0.5.1
 pexpect==4.7.0
-Pillow==6.2.0
-progress==1.5
-psutil==5.6.3
+pickleshare==0.7.5
+Pillow==6.2.1
+pluggy==0.13.0
+prompt-toolkit==2.0.10
 ptyprocess==0.6.0
-pycairo==1.18.2
-pycups==1.9.74
-pycurl==7.43.0.3
-PyGObject==3.34.0
-pyparsing==2.4.2
-PyQt5==5.13.1
-PyQt5-sip==4.19.19
-python-distutils-extra==2.39
-pytoml==0.1.21
-pyxdg==0.26
-PyYAML==5.1.2
-reportlab==3.5.28
+py==1.8.0
+Pygments==2.4.2
+pyparsing==2.4.3
+pytest==5.2.2
+pytest-django==3.6.0
+python-dateutil==2.8.1
+pytz==2019.3
+redis==3.3.11
 requests==2.22.0
-retrying==1.3.3
 six==1.12.0
-soupsieve==1.9.4
-team==1.0
-udiskie==1.7.7
-ufw==0.36
+sorl-thumbnail==12.5.0
+sqlparse==0.3.0
+TatSu==4.4.0
+traitlets==4.3.3
 urllib3==1.25.6
-variety==0.7.2
-virtualenv==16.1.0
-webencodings==0.5.1
+wcwidth==0.1.7
+wiki==0.3.1
 zipp==0.6.0
