--- a/setup.cfg
+++ b/setup.cfg
@@ -2,3 +2,7 @@
 norecursedirs = ve static media .git env venv v3 ve3 venv3 env3
 DJANGO_SETTINGS_MODULE=incubator.settings
 addopts = --reuse-db --nomigrations
+
+[flake8]
+exclude = .git,*migrations*,ve
+max-line-length = 125
