--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+appdirs==1.4.4
 arrow==0.14.7
 asgiref==3.2.10
 astroid==2.3.3
@@ -7,6 +8,7 @@ backcall==0.1.0
 bleach==3.1.5
 certifi==2019.9.11
 chardet==3.0.4
+click==7.1.2
 decorator==4.4.1
 Django==3.0.9
 django-activity-stream==0.9.0
@@ -22,7 +24,7 @@ django-jsonfield==1.4.0
 django-jsonfield-compat==0.4.4
 django-mptt==0.11.0
 django-nyt==1.1.5
-django-pandas==0.6.1
+# django-pandas==0.6.1
 django-picklefield==2.0
 django-resized==0.3.9
 django-sekizai==1.0.0
@@ -32,6 +34,7 @@ djangorestframework==3.11.1
 entrypoints==0.3
 flake8==3.7.8
 greenlet==0.4.15
+gunicorn==20.0.4
 html5lib==0.9999999
 ics==0.6
 idna==2.8
@@ -46,11 +49,13 @@ Markdown==3.2.2
 mccabe==0.6.1
 more-itertools==7.2.0
 msgpack==0.6.1
+mypy-extensions==0.4.3
 neovim==0.3.1
-numpy==1.17.3
+# numpy==1.19.2
 packaging==19.2
-pandas==0.25.3
+# pandas==0.25.3
 parso==0.5.1
+pathspec==0.8.0
 pexpect==4.7.0
 pickleshare==0.7.5
 Pillow==6.2.1
@@ -69,13 +74,16 @@ pytest-django==3.6.0
 python-dateutil==2.8.1
 pytz==2019.3
 redis==3.3.11
+regex==2020.7.14
 requests==2.22.0
 six==1.12.0
 sorl-thumbnail==12.6.3
 sqlparse==0.3.0
 TatSu==4.4.0
+toml==0.10.1
 traitlets==4.3.3
 typed-ast==1.4.0
+typing-extensions==3.7.4.3
 urllib3==1.25.6
 wcwidth==0.1.7
 webencodings==0.5.1
