--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ astroid==2.3.3
 atomicwrites==1.3.0
 attrs==19.3.0
 backcall==0.1.0
+beautifulsoup4==4.9.1
 bleach==3.1.5
 certifi==2019.9.11
 chardet==3.0.4
@@ -51,14 +52,14 @@ more-itertools==7.2.0
 msgpack==0.6.1
 mypy-extensions==0.4.3
 neovim==0.3.1
-# numpy==1.19.2
+# numpy==1.17.3
 packaging==19.2
 # pandas==0.25.3
 parso==0.5.1
 pathspec==0.8.0
 pexpect==4.7.0
 pickleshare==0.7.5
-Pillow==6.2.1
+Pillow==7.2.0
 pluggy==0.13.0
 prompt-toolkit==2.0.10
 ptyprocess==0.6.0
@@ -78,6 +79,7 @@ regex==2020.7.14
 requests==2.22.0
 six==1.12.0
 sorl-thumbnail==12.6.3
+soupsieve==2.0.1
 sqlparse==0.3.0
 TatSu==4.4.0
 toml==0.10.1
