--- a/requirements.txt
+++ b/requirements.txt
@@ -62,6 +62,7 @@ pickleshare==0.7.5
 Pillow==7.2.0
 pluggy==0.13.0
 prompt-toolkit==2.0.10
+psycopg2==2.8.6
 ptyprocess==0.6.0
 py==1.8.0
 pycodestyle==2.5.0
