--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ services:
       - "traefik.http.routers.web-secure.rule=Host(`urlab.be`)"
       - "traefik.http.routers.web-secure.tls=true"
       - "traefik.http.routers.web-secure.tls.certresolver=http"
-      - "traefik.http.routers.web-secure.service=nginx-urlab@docker"
+      - "traefik.http.routers.web-secure.service=nginx-incubator@docker"
       - "traefik.docker.network=traefik-proxy"
     depends_on:
       - web
