--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -14,7 +14,7 @@ server {
     }
 
     location /static/ {
-        alias /home/app/web/static/;
+        alias /home/app/web/collected_static/;
     }
 
 }
