--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,7 +7,7 @@ services:
       dockerfile: Dockerfile
     command: gunicorn incubator.wsgi:application --bind 0.0.0.0:8000
     volumes:
-      - static_volume:/home/app/web/static
+      - static_volume:/home/app/web/collected_static
     expose:
       - 8000
     env_file:
@@ -27,7 +27,7 @@ services:
   nginx:
     build: ./nginx
     volumes:
-      - static_volume:/home/app/web/static
+      - static_volume:/home/app/web/collected_static
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.entrypoints=http"
