--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     command: gunicorn incubator.wsgi:application --bind 0.0.0.0:8000
     volumes:
       - static_volume:/home/app/web/collected_static
+      - media_volume:/home/app/web/media
     expose:
       - 8000
     env_file:
@@ -28,6 +29,7 @@ services:
     build: ./nginx
     volumes:
       - static_volume:/home/app/web/collected_static
+      - media_volume:/home/app/web/media
     labels:
       - "traefik.enable=true"
       - "traefik.http.routers.web.entrypoints=http"
@@ -58,3 +60,4 @@ networks:
 volumes:
   postgres_data:
   static_volume:
+  media_volume:
