--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -17,4 +17,8 @@ server {
         alias /home/app/web/collected_static/;
     }
 
+    location /media/ {
+        alias /home/app/web/media/;
+    }
+
 }
