--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,10 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Install stuff
         run: |
-          - pip install -U pip setuptools
-          - pip install -r requirements.txt
-          - ./manage.py check
-          - FAKE_REDIS=1 DEBUG=1 py.test
+          pip install -U pip setuptools
+          pip install -r requirements.txt
+
+      - name: Make the tests
+        run: |
+          ./manage.py check
+          FAKE_REDIS=1 DEBUG=1 py.test
