--- a/requirements.txt
+++ b/requirements.txt
@@ -78,6 +78,7 @@ pytz==2019.3
 redis==3.3.11
 regex==2020.7.14
 requests==2.22.0
+sentry-sdk==0.17.6
 six==1.12.0
 sorl-thumbnail==12.6.3
 soupsieve==2.0.1
