--- a/requirements.txt
+++ b/requirements.txt
@@ -8,8 +8,10 @@ backcall==0.1.0
 beautifulsoup4==4.9.1
 bleach==3.1.5
 certifi==2019.9.11
+cffi==1.14.5
 chardet==3.0.4
 click==7.1.2
+cryptography==3.4.7
 decorator==4.4.1
 Django==3.0.14
 django-activity-stream==0.9.0
@@ -25,11 +27,12 @@ django-jsonfield==1.4.0
 django-jsonfield-compat==0.4.4
 django-mptt==0.11.0
 django-nyt==1.1.5
+django-oauth-toolkit==1.5.0
 django-picklefield==2.0
 django-resized==0.3.9
 django-sekizai==1.0.0
 django-simple-history==2.11.0
-https://github.com/darklow/django-suit/tarball/v2
+django-suit==2.0a1
 djangorestframework==3.11.2
 entrypoints==0.3
 flake8==3.7.8
@@ -44,6 +47,7 @@ ipython==7.9.0
 ipython-genutils==0.2.0
 isort==4.3.21
 jedi==0.15.1
+jwcrypto==0.8
 lazy-object-proxy==1.4.3
 Markdown==3.2.2
 mccabe==0.6.1
@@ -51,6 +55,7 @@ more-itertools==7.2.0
 msgpack==0.6.1
 mypy-extensions==0.4.3
 neovim==0.3.1
+oauthlib==3.1.0
 packaging==19.2
 parso==0.5.1
 pathspec==0.8.0
@@ -59,10 +64,11 @@ pickleshare==0.7.5
 Pillow==8.1.1
 pluggy==0.13.0
 prompt-toolkit==2.0.10
-psycopg2-binary==2.8.6
+psycopg2==2.8.6
 ptyprocess==0.6.0
 py==1.8.0
 pycodestyle==2.5.0
+pycparser==2.20
 pyflakes==2.1.1
 Pygments==2.7.4
 pylint==2.4.4
