--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ cache: pip
 
 install:
   - "pip install -U pip setuptools"
-  - "pip install -r requirements.txt"
+  - "pip install -r requirements.txt -r requirements-dev.txt"
 
 
 script:
