--- a/requirements.txt
+++ b/requirements.txt
@@ -30,7 +30,7 @@ django-activity-stream==0.10.0
     # via -r requirements.in
 django-analytical==3.0.0
     # via -r requirements.in
-django-bootstrap4==3.0.0
+django-bootstrap4==3.0.1
     # via -r requirements.in
 django-classy-tags==2.0.0
     # via django-sekizai
@@ -38,7 +38,7 @@ django-constance[database]==2.8.0
     # via -r requirements.in
 django-crispy-forms==1.11.2
     # via -r requirements.in
-django-extensions==3.1.2
+django-extensions==3.1.3
     # via -r requirements.in
 django-filter==2.4.0
     # via -r requirements.in
@@ -60,7 +60,7 @@ django-resized==0.3.11
     # via -r requirements.in
 django-sekizai==2.0.0
     # via wiki
-django-simple-history==2.12.0
+django-simple-history==3.0.0
     # via -r requirements.in
 django==3.2.1
     # via
@@ -86,7 +86,7 @@ influxdb==5.3.1
     # via -r requirements.in
 ipython-genutils==0.2.0
     # via traitlets
-ipython==7.22.0
+ipython==7.23.0
     # via -r requirements.in
 jedi==0.18.0
     # via ipython
@@ -94,6 +94,8 @@ markdown==3.2.2
     # via
     #   -r requirements.in
     #   wiki
+matplotlib-inline==0.1.2
+    # via ipython
 msgpack==1.0.2
     # via influxdb
 mypy-extensions==0.4.3
@@ -118,7 +120,7 @@ prompt-toolkit==3.0.18
     # via ipython
 ptyprocess==0.7.0
     # via pexpect
-pygments==2.8.1
+pygments==2.9.0
     # via ipython
 pyparsing==2.4.7
     # via packaging
@@ -143,7 +145,6 @@ six==1.15.0
     # via
     #   bleach
     #   django-jsonfield
-    #   django-simple-history
     #   ics
     #   influxdb
     #   python-dateutil
@@ -158,8 +159,10 @@ tatsu==5.6.1
 toml==0.10.2
     # via pep517
 traitlets==5.0.5
-    # via ipython
-typing-extensions==3.7.4.3
+    # via
+    #   ipython
+    #   matplotlib-inline
+typing-extensions==3.10.0.0
     # via -r requirements.in
 urllib3==1.26.4
     # via
