--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,15 +1,12 @@
-name: Run tests
+name: build and push docker
 
 on:
   push:
     branches:
       - main
-  pull_request:
-    branches:
-      - main
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-20.04
 
     steps:
@@ -40,7 +37,11 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: docker/setup-buildx-action@v1
+        name: Set up Docker Buildx
 
-      - name: Build docker image
-        run: docker build -t urlab/incubator .
+      - uses: docker/build-push-action@v2
+        name: Build and push
+        with:
+          push: true
+          tags: docker.pkg.github.com/UrLab/incubator:latest
