--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -65,4 +65,5 @@ jobs:
         name: Build and push
         with:
           push: true
-          tags: docker.pkg.github.com/urlab/incubator:latest
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
