--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "incubator"
 version = "1.0.0"
 description = "Django hackerspace website for UrLab"
-authors = ["Your Name <you@example.com>"]
+authors = ["Members of the hackerspace"]
 license = "AGPL-3.0"
 
 [tool.poetry.dependencies]
@@ -19,6 +19,13 @@ django-simple-history = "^3.0.0"
 wiki = "^0.7.9"
 gunicorn = "^20.1.0"
 psycopg2-binary = "^2.9.2"
+sentry-sdk = "^1.5.4"
+django-picklefield = "^3.0.1"
+django-resized = "^0.3.11"
+requests = "^2.27.1"
+redis = "^4.1.2"
+ics = "^0.7"
+influxdb = "^5.3.1"
 
 [tool.poetry.dev-dependencies]
 pyproject-flake8 = "^0.0.1-alpha.2"
