--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -10,25 +10,41 @@ jobs:
     runs-on: ubuntu-20.04
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
-      - uses: actions/setup-python@v2
+      - uses: actions/setup-python@v4
         with:
-          python-version: 3.9
+          python-version: '3.10'
+      
+      - name: Install and configure Poetry
+        uses: snok/install-poetry@v1
+        with:
+          version: 1.1.12
+          virtualenvs-create: true
+          virtualenvs-in-project: true
 
-      - name: Install Python dependencies
+      - name: Load cached venv
+        id: cached-poetry-dependencies
+        uses: actions/cache@v2
+        with:
+          path: .venv
+          key: venv-${{ runner.os }}-${{ steps.setup-python.outputs.python-version }}-${{ hashFiles('**/poetry.lock') }}
+      
+      - name: Install dependencies
+        if: steps.cached-poetry-dependencies.outputs.cache-hit != 'true'
+        run: poetry install --no-interaction
+
+      - name: Set env variables
         run: |
-          pip install --upgrade pip
-          pip install -r requirements.txt -r requirements-dev.txt
-
-      - name: Lint python code
-        run: flake8 --ignore=E501,F401,E402,F811,E731,F403 .
-
-      - name: Run django checks
-        run: ./manage.py check
-
-      - name: Check migrations
-        run: ./manage.py makemigrations --dry-run --check
+          echo 'FAKE_REDIS=1' >> $GITHUB_ENV
+          echo 'DEBUG=1' >> $GITHUB_ENV
+        shell: bash
 
       - name: Run tests
-        run: FAKE_REDIS=1 DEBUG=1 py.test
+        run: |
+          source .venv/bin/activate
+          flake8
+          ./manage.py check
+          ./manage.py makemigrations --dry-run --check
+          DJANGO_SETTINGS_MODULE=incubator.settings py.test
+
