[UPD] setup.cfg

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,3 +1,9 @@
+[tool:pytest]
+norecursedirs = ve static media .git env venv v3 ve3 venv3 env3
+DJANGO_SETTINGS_MODULE=incubator.settings
+addopts = --reuse-db --nomigrations
+
 [flake8]
 ignore=E501,F401,E402,F811,E731,F403
 exclude=.git,ve,migrations,venv,.venv
+max-line-length = 125
