--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -42,9 +42,7 @@ jobs:
 
       - name: Run tests
         run: |
-          source .venv/bin/activate
-          flake8
-          ./manage.py check
-          ./manage.py makemigrations --dry-run --check
+          poetry run flake8
+          poetry run python manage.py check
+          poetry run python manage.py makemigrations --dry-run --check
           DJANGO_SETTINGS_MODULE=incubator.settings py.test
-
