--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,15 +33,12 @@ services:
       - media_volume:/home/app/web/media
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.web.entrypoints=http"
+      - "traefik.http.routers.web.entrypoints=web"
       - "traefik.http.routers.web.rule=Host(`urlab.be`)"
-      - "traefik.http.middlewares.web-https-redirect.redirectscheme.scheme=https"
-      - "traefik.http.routers.web.middlewares=web-https-redirect"
-      - "traefik.http.routers.web-secure.entrypoints=https"
       - "traefik.http.routers.web-secure.rule=Host(`urlab.be`)"
-      - "traefik.http.routers.web-secure.tls=true"
-      - "traefik.http.routers.web-secure.tls.certresolver=http"
-      - "traefik.http.routers.web-secure.service=nginx-incubator@docker"
+      - "traefik.http.routers.web-secure.entrypoints=websecure"
+      - "traefik.http.routers.web-secure.tls.certresolver=myresolver"
+      # - "traefik.http.routers.web-secure.service=nginx-incubator@docker"
       - "traefik.docker.network=traefik-proxy"
     depends_on:
       - web
