--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,12 @@ services:
       - private
     restart: unless-stopped
 
+  redis:
+    image: redis:latest
+    networks:
+      - private
+    restart: unless-stopped
+
   db:
     image: postgres:12.0-alpine
     volumes:
