--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -22,7 +22,7 @@ jobs:
           pip install -r requirements.txt -r requirements-dev.txt
 
       - name: Lint python code
-        run: flake8 --ignore=E501,F401,E402,F811,E731,F403 .
+        run: flake8 --ignore=E501,F401,E402,F811,E731,F403,E721 .
 
       - name: Run django checks
         run: ./manage.py check
